--- a/index.html
+++ b/index.html
@@ -9,13 +9,19 @@
 
 </head>
 <body>
-
-    <div class="bottomImageContainer">
+    <!-- <div class="bottomImageContainer">
         <img
-        src=""
+        src="comingSoon.png"
         class="bottomImage"
         alt="coming soon image">
     </div>
+
+
+<div class="company" style="padding-left: 630px; font-size: 20px;">
+    <h1>Paradise Dreams</h1>
+</div>
+
+    &nbsp; -->
     <p id="countdownTimer"></p>
         
 </body>
